# Notification

./: .gitignore  db.sqlite3  pyproject.toml
blog/: models.py
blog/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py
notification/: consumers.py  models.py  serializers.py  views.py
notification/migrations/: 0001_initial.py  0002_alter_subscription_user_and_more.py  0003_notification.py
